compiler/testData/diagnostics/testsWithJsStdLib/name/methodAndMethod.kt
// FIR_IGNORE
// FIR_IDENTICAL
package foo

<!JS_NAME_CLASH!>fun bar(x: Int)<!> = x

<!JS_NAME_CLASH!>fun `bar_za3lpa$`()<!> = 42